# zk-learning

./: Cargo.toml  README.md
benches/: bench_sumcheck.rs  bench_triangles.rs
src/: lagrange copy.rs  lagrange.rs  lib.rs  small_fields.rs  sumcheck copy.rs  sumcheck.rs  triangles.rs  utils.rs
src/mles/: dynamic_mle.rs  mod.rs  poly_mle.rs  slow_mle.rs  stream_mle.rs
src/mles/value_mle/: mle.rs  mod.rs
src/mles/value_mle/methods/: dynamic.rs  mod.rs  slow.rs  stream.rs
tests/: test_lagrange.rs  test_sumcheck.rs  test_triangles.rs
