[package]
name = "thaler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.0"
rand = "0.8.5"
ark-bls12-381 = "0.3.0"
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
ark-std = { git = "https://github.com/arkworks-rs/std" }
criterion = {version = "0.4", features = ["html_reports"]}

[dev-dependencies]
rstest = "0.12.0"
lazy_static = "1.4.0"

[[bench]]
name = "bench_sumcheck"
harness = false
